src/styles/globals.css
/* ... */
.customSlider-thumb-2:focus {
  outline: none;
}
.customSlider-thumb-mob:focus {
  outline: none;
}
.customSlider-thumb:focus {
  outline: none;
}

.customSlider-mark {
  cursor: pointer;
  margin: auto;
  top: 10px;
  width: 5px;
  height: 45px;
  background-color: black;
}

#fp-nav ul li a span,
.fp-slidesNav ul li a span {
  background: #00b2e2 !important;
}

#fp-nav {
  background-color: #fff;
  border-radius: 10px;
  -webkit-box-shadow: -3px 3px 14.5px 2px rgba(0, 0, 0, 0.19);
  -moz-box-shadow: -3px 3px 14.5px 2px rgba(0, 0, 0, 0.19);
  box-shadow: -3px 3px 14.5px 2px rgba(0, 0, 0, 0.19);
}

.tea {
  animation: bounce 1.2s infinite ease-in-out;
}
.coffee {
  animation: bounce 1s infinite ease-in-out;
}
.wine {
  animation: bounce 1.4s infinite ease-in-out;
}

@keyframes bounce {
  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
}

.item {
  overflow: hidden;
}

@media screen and (max-width: 600px) {
  .customSlider-thumb-2::before {
    content: url("/img/slider-lady.svg");
    width: 250px;
    height: 250px;
    position: absolute;
    left: 50%;
    top: 0%;
    transform: translate(-50%, -50%);
  }
}

@media screen and (max-width: 600px) {
  .bgimageLogo {
    background-image: url("/img/fairtrade-mark.png");
    width: 100px;
    height: 120px;
    background-position: center;
  }
}

@media screen and (min-width: 600px) {
  .bgimageLogo {
    background-image: url("/img/fairtrade-mark.png");
    width: 200px;
    height: 235px;
    background-position: center;
  }
}
@media screen and (max-width: 350px) {
  .bgimageLogo {
    background-image: url("/img/fairtrade-mark.png");
    width: 70px;
    height: 90px;
    background-position: center;
  }
}

.animate-q {
  animation: ping 10s cubic-bezier(0, 0, 0.2, 1) infinite;
}
.animate-q-1 {
  animation: ping 14s cubic-bezier(0, 0, 0.2, 1) infinite;
}
.animate-q-2 {
  animation: ping 9s cubic-bezier(0, 0, 0.2, 1) infinite;
}
.animate-q-3 {
  animation: ping 5s cubic-bezier(0, 0, 0.2, 1) infinite;
}
.animate-q-4 {
  animation: ping 9s cubic-bezier(0, 0, 0.2, 1) infinite;
}

@keyframes ping {
  75%,
  100% {
    transform: scale(2);
    opacity: 0.3;
  }
}

@media screen and (max-width: 600px) {
  #fp-nav.fp-right {
    right: -6px !important;
  }
}
@media screen and (max-width: 410px) {
  .see-fact-2 {
    bottom: 5%;
  }
  .q-2-title {
    margin-top: 80px;
  }
  .q-3-title {
    margin-top: 80px;
  }
  .icon-cont {
    padding-bottom: 30px !important;
  }
}

.arrow {
  animation: spring 1.8s infinite ease-in-out;
}

@keyframes spring {
  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateX(0);
  }
  40% {
    transform: translateX(-30px);
  }
  60% {
    transform: translateX(-15px);
  }
}

.buttonNotice {
  animation: bounce 1.8s infinite ease-in-out;
}

@keyframes bounce {
  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-20px);
  }
  60% {
    transform: translateY(-5px);
  }
}
.ft-arrow {
  padding-top: 30px;
}

.ft-arrow::after {
  position: absolute;
  top: -25%;
  right: -6%;
  content: url("/img/curved-arrow.png");
  pointer-events: none;
  z-index: 0;
}

@media screen and (max-width: 600px) {
  .ft-arrow::after {
    content: url("/img/curved-arrow-mob.png");
    top: -10%;
    right: 0;
  }
}
.ft-arrow-2 {
  padding-top: 30px;
}

.ft-arrow-2::after {
  position: absolute;
  top: -5%;
  right: 0;
  content: url("/img/curved-arrow.png");
  pointer-events: none;
  z-index: 0;
}

@media screen and (max-width: 600px) {
  .ft-arrow-2::after {
    content: url("/img/curved-arrow-mob.png");
    top: -10%;
    right: 0;
  }
}
.ft-arrow-3 {
  padding-top: 30px;
}

.ft-arrow-3::after {
  position: absolute;
  top: -5%;
  right: 0;
  content: url("/img/curved-arrow.png");
  pointer-events: none;
  z-index: 0;
}

@media screen and (max-width: 600px) {
  .ft-arrow-3::after {
    content: url("/img/curved-arrow-mob.png");
    top: 0;
    right: 0;
  }
}
.ft-arrow-4 {
  padding-top: 30px;
}

.ft-arrow-4::after {
  position: absolute;
  top: 0;
  right: 0;
  content: url("/img/curved-arrow-alt.png");
  pointer-events: none;
  z-index: 0;
}

@media screen and (max-width: 600px) {
  .ft-arrow-4::after {
    content: url("/img/curved-arrow-mob.png");
    top: 0;
    right: 0;
  }
}

@media screen and (max-width: 375px) {
  .buttonNotice-mobile {
    padding-right: 40px !important;
    position: absolute !important;
    top: 170px !important;
    right: -120px !important;
  }
}

@keyframes ping {
  75%,
  100% {
    transform: scale(1.2);
    opacity: 0;
  }
}
.animate-ping {
  animation: ping 1.3s cubic-bezier(0, 0, 0.2, 1) infinite;
}

@media screen and (min-width: 1060px) {
  .verticle-text {
    writing-mode: vertical-lr;
  }
}

.message-box {
  clip-path: polygon(
    0% 0%,
    100% 0%,
    100% 75%,
    30% 75%,
    10% 100%,
    10% 75%,
    0% 75%
  );
}

@keyframes slide {
  0%,
  100% {
    transform: translateX(-15%);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
  }
  50% {
    transform: none;
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
  }
}
.animate-slide {
  animation: slide 1s infinite;
}

/* ===== COMPREHENSIVE MOBILE OPTIMIZATIONS ===== */

/* Mobile-specific optimizations for small screens */
@media screen and (max-width: 600px) {
  .bgHomeHero {
    width: 100% !important;
    height: 100vh !important;
  }
  
  button, .cursor-pointer {
    min-height: 44px;
    min-width: 44px;
  }
  
  body {
    font-size: 16px;
    line-height: 1.5;
  }
  
  * {
    /* Hardware acceleration for better performance */
    -webkit-transform: translateZ(0);
    -moz-transform: translateZ(0);
    -ms-transform: translateZ(0);
    -o-transform: translateZ(0);
    transform: translateZ(0);
  }
}
/* ... */

